# youtube-music-mcp-server

./: .env.example  .gitignore  AUDIO_FEATURES_ARCHITECTURE.md  AUTHENTICATION_GUIDE.md  CLAUDE.md  COOKIE_LONGEVITY.md  DATABASE_SETUP.md  DISCOVERY_OPTIMIZATION.md  Dockerfile  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-STATUS.md  OAUTH_ONLY_SETUP.md  PLAYLIST_GUIDELINES.md  README.md  SMITHERY_ABOUT.md  SMITHERY_SETUP.md  SPOTIFY_RECOMMENDATIONS_PROPOSAL.md  TECHNICAL.md  main.py  main_mcp_oauth.py  middleware.py  oauth_handler.py  package-lock.json  package.json  pyproject.toml  railway.toml  run_tests.sh  smithery-description.txt  smithery.yaml  smithery_hybrid.yaml  test-auth.js  test-reccobeats-recommendations.ts  test-reccobeats.ts  test-spotify-debug.js  test-spotify.ts  test-with-config.js  test_auth_logic.py  test_headers.py
plan/: IMPLEMENTATION-GUIDE-PART-2.md  IMPLEMENTATION-GUIDE.md  MASTER-INDEX.md  adaptive-playlist-integration-guide.md  ai-playlist-builder-corrected.md  multi-user-scalability-guide.md
src/: auth.ts  config.ts  curation.ts  index.ts  railway.ts  server.ts  types.ts  youtube-music-client.ts
src/adaptive-playlist/: encoder.ts  recommendation-engine.ts  session-manager.ts  song-features.ts  types.ts
src/adaptive-playlist/scoring/: index.ts  primary.ts  secondary.ts  tertiary.ts
src/auth/: smithery-oauth-provider.ts  token-store.ts
src/database/: client.ts  migrate.ts  schema.sql
src/reccobeats/: client.ts
src/spotify/: client.ts
src/tools/: adaptive-playlist.ts  playlist.ts  query.ts  reccobeats.ts  smart-playlist.ts  system.ts
src/youtube-data/: client.ts
src/youtube-music/: client.ts  parsers.ts
src/youtube_music_mcp.egg-info/: PKG-INFO
src/ytmusic_server/: server.py
ytmusic_server/: __init__.py  config.py  server.py
ytmusic_server/auth/: oauth_endpoints.py  resource_metadata.py
ytmusic_server/middleware/: oauth_middleware.py
