[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "youtube-music-mcp"
version = "2.0.0"
description = "Enterprise-grade YouTube Music MCP Server with OAuth 2.1 authentication"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "YouTube Music MCP Team", email = "contact@example.com"},
]
keywords = ["youtube", "music", "mcp", "oauth", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.13.0",
    "ytmusicapi>=1.7.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.104.0",
    "cryptography>=41.0.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "structlog>=23.0.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
]

[project.optional-dependencies]
monitoring = [
    "prometheus-client>=0.17.0",
]
deployment = [
    "smithery>=0.3.1",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[project.scripts]
ytmusic-mcp = "ytmusic_server.cli:main"
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[project.urls]
Homepage = "https://github.com/example/youtube-music-mcp"
Documentation = "https://youtube-music-mcp.readthedocs.io"
Repository = "https://github.com/example/youtube-music-mcp.git"
"Bug Tracker" = "https://github.com/example/youtube-music-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["ytmusic_server"]

[tool.smithery]
server = "ytmusic_server.server:create_server"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["ytmusic_server"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]